# lux-client

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  config.h.in  config.hpp.in  lux-client  lux-client.supp
api/: CMakeLists.txt  api.cpp  api.hpp  decl.h  lux-api.lua
gl/: glad-2.1.cpp  glad-es-2.0.cpp
glad/: glad-2.1.cpp  glad-3.3.cpp
glsl/: block.frag  block.frag.old  block.vert  block_norm.frag  block_norm.geom  block_norm.vert  color_shape.frag  color_shape.vert  console.frag  console.vert  dbg_shapes.frag  dbg_shapes.vert  entity.frag  entity.vert  fov.frag  fov.vert  fragment-2.1.glsl  fragment-es-2.0.glsl  fragment.glsl  interface-2.1.frag  interface-2.1.vert  light.frag  light.vert  map-3.3.frag  map-3.3.vert  map-es-2.0.frag  map-es-2.0.vert  map.frag  map.vert  map_deferred.frag  map_deferred.vert  pane.frag  pane.vert  roof.frag  roof.vert  text.frag  text.vert  tile.frag  tile.vert  vertex-2.1.glsl  (+2 more)
include/: GLFW  KHR  glad  imgui  lodepng  lodepng.h  lux_shared  tinyformat.h
include/glad/: glad-2.1.h  glad-3.3.h  glad-es-2.0.h  glad.h
src/: client.cpp  client.hpp  console.cpp  console.hpp  db.cpp  db.hpp  debug_interface.cpp  debug_interface.hpp  entity.cpp  entity.hpp  entity_controller.cpp  entity_controller.hpp  gl_initializer.cpp  gl_initializer.hpp  glad.cpp  include_glfw.hpp  include_opengl.hpp  io_client.cpp  io_client.hpp  io_handler.cpp  io_handler.hpp  io_node.cpp  io_node.hpp  lux_opengl.cpp  lux_opengl.hpp  main.cpp  map.cpp  map.hpp  net_client.cpp  net_client.hpp  rasterizer.cl  renderer.cpp  renderer.hpp  rendering.cpp  rendering.hpp  ui.cpp  ui.hpp  viewport.cpp  viewport.hpp
src/data/: config.hpp  database.cpp  database.hpp  obj.hpp
src/map/: chunk.hpp  geometry_vert.hpp  lightning_vert.hpp  map.cpp  map.hpp  voxel_type.hpp
src/map/tile/: tile.hpp  tile_type.hpp
src/render/: camera.cpp  camera.hpp  common.hpp  gl.hpp  index.hpp  interface_vertex.hpp  mesh.hpp  model.hpp  program.cpp  program.hpp  texture.cpp  texture.hpp  tileset.cpp  tileset.hpp  vertex.hpp
src/util/: log.cpp  log.hpp  tick_clock.cpp
